Actions
Bug #20730
closedLoadError if Rakefile has shebang
Bug #20730:
LoadError if Rakefile has shebang
ruby -v:
ruby 3.4.0dev (2024-09-12T20:03:28Z master 0fc8422a05) +PRISM [x86_64-linux]
Actions
Added by watson1978 (Shizuo Fujita) about 2 years ago. Updated about 2 years ago.
I have opened https://github.com/ruby/ruby/pull/11617 to fix this.
Applied in changeset git|9afc6a981deae6e23d938cf5c2c4baadfeaafdb1.
[PRISM] Only parse shebang on main script
Fixes [Bug #20730]
ruby command handles a shebang, but it is not a part of the Ruby syntax.
Parsers should not consider shebang lines.