[PRISM] Only parse shebang on main script

Fixes [Bug #20730]